--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py35
+envlist = py27, py35, py36
 
 [flake8]
 show-pep8 = True
@@ -18,4 +18,4 @@ deps=
     pytz
 commands =
 	{envpython} setup.py install
-	flake8 ecsctl
+	flake8
